fix: range spacing and output text styles

--- a/src/css/betterbuffsbar.css
+++ b/src/css/betterbuffsbar.css
@@ -1046,6 +1046,17 @@ h3 {
   margin-bottom: .65rem;
 }
 
+#Settings input[type="range"] {
+  margin-top: .4rem !important;
+}
+
+#Settings input[type="range"] ~ output {
+  font-size: 14px;
+  color: #94afbd;
+  text-shadow: 1px 1px #000000;
+  margin-top: .4rem;
+}
+
 input[type="color"] {
   margin-right: .5rem;
   width: 21px;
